# predicta-harness

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py  sandbox_agent.py  structured.py
specs/sandbox/: DESIGN.md  SPEC.md  TASKS.md
src/predicta_harness/: __init__.py  agent.py  tool.py  types.py  usage.py
src/predicta_harness/providers/: __init__.py  anthropic.py  base.py  openai.py
src/predicta_harness/sandbox/: __init__.py  base.py  bubblewrap.py  local.py  tools.py  types.py  workspace.py
src/predicta_harness/service/: __init__.py  __main__.py  app.py
tests/: _mock_provider.py  test_bubblewrap_sandbox.py  test_local_sandbox.py  test_sandbox_tools.py  test_sandbox_tools_integration.py  test_service.py  test_service_files.py  test_workspace.py
